# zephyr-nix

./: .gitignore  LICENSE  README.md  flake.nix
.github/workflows/: test.yaml
lib/: mkCrossCCache.nix  mkZephyrDependencies.nix  mkZephyrEnv.nix
lib/mkPythonEnv/: default.nix  setup.sh
pkgs/pylock/: default.nix  pylock.sh
pkgs/update/: default.nix  update.sh
pkgs/zephyr-nix-update/: default.nix  zephyr-nix-update.sh
pkgs/zephyr-sdk/: default.nix
scripts/: check-flake.sh  update-sdk-hash.sh
tests/: .gitignore  README.md  conftest.py  pyproject.toml  test_integration.py  test_mkPythonEnv.py  test_pylock.py  test_zephyr_sdk.py
tests/fixtures/mkPythonEnv/simple/: requirements.in
