[project]
name = "zephyr-nix-tests"
version = "0.1.0"
description = "Test suite for zephyr-nix"
requires-python = ">=3.12"
dependencies = ["pytest>=8.3.0"]

[dependency-groups]
dev = ["ruff>=0.8.0"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
"E",   # pycodestyle errors
"W",   # pycodestyle warnings
"F",   # pyflakes
"I",   # isort
"B",   # flake8-bugbear
"C4",  # flake8-comprehensions
"UP",  # pyupgrade
"ARG", # flake8-unused-arguments
"SIM", # flake8-simplify
]
ignore = [
"E501", # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
